--- a/views/pages/trade/settlement.ejs
+++ b/views/pages/trade/settlement.ejs
@@ -1,9 +1,32 @@
 <% include ../../partials/header %>
 
 <div class="row">
-	<div class="col-md-12">
-  		<h1 align="center">Settlement Swap</h1>
-	</div>
+    <div class="col-md-12">
+        <h1 align="center">Settlement</h1>
+    </div>
 </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+      Alice Redeems
+    </div>
+    <div class="panel-body">
+        <div class="form-group">
+          <label>Trade ID</label>
+          <input id="tradeId" type="number" class="form-control" placeholder="" />
+        </div>
+        <div class="form-group">
+          <label>Preimage</label>
+          <input id="preimage" type="text" class="form-control" placeholder="" />
+        </div>
+        </div>
+        <div class="form-group text-center">
+            <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
+        </div>
+        <div id="unlockMessage"></div>
+    </div>
+</div>
+
+<script src="/static/js/init.js"></script>
 
 <% include ../../partials/footer %>
