--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,9 @@
     <link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
