Add browser hdprivkey gen that cheats by doing it on server. use browserify

--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -1,5 +1,19 @@
+<% include ../partials/header %>
+
+
 <div class="row">
 	<div class="col-md-12">
   		<h1 align="center">Setup</h1>
+			<div class="panel-body">
+					<div class="form-group">
+						<label>Enter your password:</label>
+						<input id="password" type="text" class="form-control" placeholder="" />
+						<button type="button" class="btn btn-default" id="enterPassword">Enter</button>
+					</div>
+			</div>
+			<div class="panel-body">
+				<p id="setupSuccessMessage">
+				</p>
+			</div>
 	</div>
 </div>
