Add default route. Add navbar to pages. Convert unlock to use injected Web3 environment instead of endpoints

--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -1,5 +1,9 @@
+<% include ../partials/header %>
+
 <div class="row">
 	<div class="col-md-12">
   		<h1 align="center">Setup</h1>
 	</div>
 </div>
+
+<% include ../partials/footer %>
