--- a/views/pages/trade/review.ejs
+++ b/views/pages/trade/review.ejs
@@ -2,8 +2,30 @@
 
 <div class="row">
 	<div class="col-md-12">
-  		<h1 align="center">Review Swap</h1>
+  		<h1 align="center">Review</h1>
 	</div>
 </div>
+
+<div class="row">
+	<div class="col-md-offset-3 col-md-6">
+		<div class="panel panel-default">
+	        <div class="panel-heading">
+	          Bob
+	        </div>
+	        <div class="panel-body">
+	        	<div class="text-center">
+		        	<form class="form" method="post" action="/api/zec/fund">
+						<p>
+							By funding <%= p2sh %> you agreeing to trade the amount of ZEC in <%= p2sh %> for <%= ethAmount %> wei of ETH.
+						</p>
+						<button class="btn btn-default" type="submit">Agree</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script src="/static/js/review.js"></script>
 
 <% include ../../partials/footer %>
