--- a/views/pages/trade/settlement.ejs
+++ b/views/pages/trade/settlement.ejs
@@ -6,27 +6,74 @@
     </div>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-      Alice Redeems
-    </div>
-    <div class="panel-body">
-        <div class="form-group">
-          <label>Trade ID</label>
-          <input id="tradeId" type="number" class="form-control" placeholder="" />
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+          Alice
         </div>
-        <div class="form-group">
-          <label>Preimage</label>
-          <input id="preimage" type="text" class="form-control" placeholder="" />
-        </div>
-        </div>
-        <div class="form-group text-center">
-            <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
+        <div class="panel-body">
+            <div class="form-group">
+              <label>Trade ID</label>
+              <select id="tradeId" class="form-control">
+              </select>
+            </div>
+            <div class="form-group">
+            <a id="tradeDetailsLink" data-toggle="collapse" href="#tradeDetails" aria-expanded="false" aria-controls="tradeDetails">View Details</a>
+              <div class="collapse" id="tradeDetails">
+                <div class="well">
+                  <div class="form-group">
+                    <label>Transaction Hash</label>
+                    <pre id="tradeTx"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>Sender Ethereum Address</label>
+                    <pre id="sender"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>Sender Zcash Address</label>
+                    <pre id="senderZAddr"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>Redeemer Ethereum Address</label>
+                    <pre id="redeemer"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>Redeemer ZCash Address</label>
+                    <pre id="redeemerZAddr"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>H(X)</label>
+                    <pre id="hash"></pre>
+                  </div>
+                  <div class="form-group">
+                    <label>Amount</label>
+                    <div class="input-group">
+                      <span id="amount" class="form-control"></span>
+                      <div class="input-group-addon">wei</div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Timeout Block</label>
+                    <div id="timeoutBlock" class="form-control"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label>Preimage</label>
+              <input id="preimage" type="text" class="form-control" placeholder="" />
+            </div>
+            </div>
+            <div class="form-group text-center">
+                <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
+            </div>
         </div>
         <div id="unlockMessage"></div>
     </div>
+  </div>
 </div>
 
-<script src="/static/js/init.js"></script>
+<script src="/static/js/settlement.js"></script>
 
 <% include ../../partials/footer %>
