Fix extracting trade Id from event. Update GUI.

--- a/views/pages/trade/init.ejs
+++ b/views/pages/trade/init.ejs
@@ -7,13 +7,13 @@
   </div>
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-offset-3 col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading">
-          Alice
+          You
         </div>
         <div class="panel-body">
-          <form class="form" role="">
+          <form class="form">
             <div class="form-group">
               <label>Ethereum Address</label>
               <input id="senderAccount" type="text" class="form-control" placeholder="" />
@@ -26,10 +26,12 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
+  </div>
+  <div class="row">
+    <div class="col-md-offset-3 col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading">
-          Bob
+          Counterparty
         </div>
         <div class="panel-body">
           <form class="form">
