--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -1,20 +1,25 @@
 <% include ../partials/header %>
 
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-offset-3 col-md-6">
   		<h1 align="center">Setup</h1>
-			<div class="panel-body">
-					<div class="form-group">
-						<label>Enter your password:</label>
-						<input id="password" type="text" class="form-control" placeholder="" />
-						<button type="button" class="btn btn-default" id="enterPassword">Enter</button>
-					</div>
-			</div>
-			<div class="panel-body">
-				<p id="setupSuccessMessage">
-				</p>
+  			<div class="panel panel-default">
+				<div class="panel-body">
+					<form class="form">
+						<div class="form-group">
+							<label>Enter your password:</label>
+							<input id="password" type="text" class="form-control" placeholder="" />
+						</div>
+						<center>
+							<button type="button" class="btn btn-default" id="enterPassword">Enter</button>
+						</center>
+					</form>
+					<p id="setupSuccessMessage"></p>
+				</div>
 			</div>
 	</div>
 </div>
+
+<script src="static/js/bundle.js"></script>
 
 <% include ../partials/footer %>
