--- a/views/pages/trade/settlement.ejs
+++ b/views/pages/trade/settlement.ejs
@@ -7,70 +7,32 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-8">
+    <% include ../../partials/trade %>
+  </div>
+  <div class="col-md-4">
     <div class="panel panel-default">
-        <div class="panel-heading">
-          Alice
-        </div>
+      <div class="panel-heading">
+        Settle
+      </div>
+      <form class="form">
         <div class="panel-body">
-            <div class="form-group">
-              <label>Trade ID</label>
-              <select id="tradeId" class="form-control">
-              </select>
-            </div>
-            <div class="form-group">
-            <a id="tradeDetailsLink" data-toggle="collapse" href="#tradeDetails" aria-expanded="false" aria-controls="tradeDetails">View Details</a>
-              <div class="collapse" id="tradeDetails">
-                <div class="well">
-                  <div class="form-group">
-                    <label>Transaction Hash</label>
-                    <pre id="tradeTx"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>Sender Ethereum Address</label>
-                    <pre id="sender"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>Sender Zcash Address</label>
-                    <pre id="senderZAddr"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>Redeemer Ethereum Address</label>
-                    <pre id="redeemer"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>Redeemer ZCash Address</label>
-                    <pre id="redeemerZAddr"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>H(X)</label>
-                    <pre id="hash"></pre>
-                  </div>
-                  <div class="form-group">
-                    <label>Amount</label>
-                    <div class="input-group">
-                      <span id="amount" class="form-control"></span>
-                      <div class="input-group-addon">wei</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Timeout Block</label>
-                    <div id="timeoutBlock" class="form-control"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label>Preimage</label>
-              <input id="preimage" type="text" class="form-control" placeholder="" />
-            </div>
-            </div>
-            <div class="form-group text-center">
-                <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
-            </div>
+          <div class="form-group">
+            <label>Trade ID</label>
+            <select id="tradeId" class="form-control">
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Preimage</label>
+            <input id="preimage" type="text" class="form-control" placeholder="" />
+          </div>
+          <div class="form-group text-center">
+              <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
+          </div>
         </div>
-        <div id="unlockMessage"></div>
+      </form>
     </div>
+    <div id="unlockMessage"></div>
   </div>
 </div>
 
