Add wallet page to generate new addrs for trades

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,5 +47,8 @@
           <li>
             <a href="/trade/settlement">Settlement</a>
           </li>
+          <li>
+            <a href="/wallet">Wallet</a>
+          </li>
         </ul>
       </div>
