User can create HD wallet for Zcash and new addresses

--- a/views/pages/trade/init.ejs
+++ b/views/pages/trade/init.ejs
@@ -87,5 +87,7 @@
   </div>
 
   <script src="/static/js/init.js"></script>
+  <script src="/static/js/bundle.js"></script>
+
 
 <% include ../../partials/footer %>
