--- a/views/pages/trade/zec-settle.ejs
+++ b/views/pages/trade/zec-settle.ejs
@@ -2,15 +2,14 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1 align="center">Settlement</h1>
+        <h1 align="center">Settle ZEC</h1>
     </div>
 </div>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-8 col-md-offset-2">
     <% include ../../partials/trade %>
-  </div>
-  <div class="col-md-4">
+
     <div class="panel panel-default">
       <div class="panel-heading">
         Settle
@@ -18,16 +17,11 @@
       <form class="form">
         <div class="panel-body">
           <div class="form-group">
-            <label>Trade ID</label>
-            <select id="tradeId" class="form-control">
-            </select>
-          </div>
-          <div class="form-group">
             <label>Preimage</label>
             <input id="preimage" type="text" class="form-control" placeholder="" />
           </div>
           <div class="form-group text-center">
-              <button type="button" class="btn btn-default" id="unlockBtn">Unlock</button>
+              <button type="button" class="btn btn-primary" id="unlockBtn">Redeem</button>
           </div>
         </div>
       </form>
@@ -36,6 +30,6 @@
   </div>
 </div>
 
-<script src="/static/js/settlement.js"></script>
+<script src="/static/js/zec-settle.js"></script>
 
 <% include ../../partials/footer %>
