--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -1,20 +1,20 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <h4 align="center">Trade Info</h4>
+    <h2 align="center">Trade</h2>
     <form class="form" id="trade">
       <div class="row">
         <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading">
-              ETH Contract
+              ETH HashLock Contract
             </div>
             <div class="panel-body">
               <div class="form-group">
-                <label>Sender</label>
+                <label>Initializer (A)</label>
                 <pre id="sender"></pre>
               </div>
               <div class="form-group">
-                <label>Redeemer</label>
+                <label>Redeemer (B)</label>
                 <pre id="redeemer"></pre>
               </div>
               <div class="form-group">
@@ -32,30 +32,34 @@
                 <label>Timeout Block</label>
                 <div id="timeoutBlock" class="form-control"></div>
               </div>
-              <div class="form-group">
-                <label>Transaction Hash</label>
-                <pre id="ethContractTx"></pre>
-              </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading">
-              ZEC Contract
+              ZEC HashLock Contract
             </div>
             <div class="panel-body">
               <div class="form-group">
-                <label>Sender</label>
-                <pre id="senderZAddr"></pre>
-              </div>
-              <div class="form-group">
-                <label>Redeemer</label>
+                <label>Initializer (B)</label>
                 <pre id="redeemerZAddr"></pre>
               </div>
               <div class="form-group">
-                <label>Transaction Hash</label>
-                <pre id="zecContractTx"></pre>
+                <label>Redeemer (A)</label>
+                <pre id="senderZAddr"></pre>
+              </div>
+              <div class="form-group">
+                <label>Redeem Block</label>
+                <pre id="redeemblocknum"></pre>
+              </div>
+              <div class="form-group">
+                <label>Redeem Script</label>
+                <pre id="redeemScript"></pre>
+              </div>
+              <div class="form-group">
+                <label>P2SH</label>
+                <pre id="p2sh"></pre>
               </div>
             </div>
           </div>
