--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -64,7 +64,7 @@
       <div class="form-group">
         <label>Amount</label>
         <div class="input-group">
-          <input id="amount" type="text" class="form-control" placeholder="" /> 
+          <input id="amount" type="text" class="form-control" placeholder="" />
           <div class="input-group-addon">
             wei
           </div>
@@ -74,7 +74,7 @@
         <div class="collapse" id="senderDetails">
           <div class="well">
             <div class="form-group">
-              <label>X</label>
+              <label>Secret preimage used to redeem funds:</label>
               <div class="input-group">
                 <input id="randomX" type="text" class="form-control" placeholder="" />
                 <span class="input-group-btn">
@@ -83,13 +83,13 @@
               </div>
             </div>
             <div class="form-group">
-              <label>H(X)</label>
+              <label>Hash of preimage that will commit funds on blockchain:</label>
               <pre id="hashRandomX"></pre>
             </div>
             <div class="form-group">
-              <label>Expires</label>
+              <label>Number of blocks before tx expires and is refunded:</label>
               <div class="input-group">
-                <input id="blocksToWait" type="number" class="form-control" min="1" placeholder="#" value="4" />
+                <input id="blocksToWait" type="number" class="form-control" min="1" placeholder="#" value="20" />
                 <span class="input-group-addon">blocks later</span>
               </div>
             </div>
