--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -18,20 +18,9 @@
               <label>Ethereum Address</label>
               <input id="senderAccount" type="text" class="form-control" placeholder="" />
             </div>
-            <div class="well">
-              <div class="form-group">
-                <label>Password</label>
-                <div class="input-group">
-                  <input id="password" type="password" class="form-control" />
-                  <span class="input-group-btn">
-                    <button type="button" id="newAddressBtn" class="btn btn-default">New Address</button>
-                  </span>
-                </div>
-              </div>
-              <div class="form-group">
-                <label>ZCash Address</label>
-                <span id="senderZAddr" type="text" class="form-control" placeholder=""></span>
-              </div>
+            <div class="form-group">
+              <label>ZCash Address</label>
+              <input id="senderZAddr" type="text" class="form-control" placeholder="" />
             </div>
           </form>
         </div>
@@ -78,7 +67,7 @@
               <div class="input-group">
                 <input id="randomX" type="text" class="form-control" placeholder="" />
                 <span class="input-group-btn">
-                  <button type="button" class="btn btn-default" id="newPreimageBtn">Refresh</button>
+                  <button type="button" class="btn btn-default" id="newPreimageBtn">Random</button>
                 </span>
               </div>
             </div>
