--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ZEC <-> ETH</title>
+    <title>ZEC <-> ETH: <%= title %></title>
 
     <!-- Bootstrap -->
     <link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
