Populate data on zec/settle page

--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -54,8 +54,8 @@
                 <pre id="redeemblocknum"></pre>
               </div>
               <div class="form-group">
-                <label>Redeem Script</label>
-                <pre id="redeemScript"></pre>
+                <label>Funding Txid</label>
+                <pre id="fundTx"></pre>
               </div>
               <div class="form-group">
                 <label>P2SH</label>
