--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -55,15 +55,28 @@
   </div>
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
-      <div class="form-group">
-        <label>Amount</label>
-        <div class="input-group">
-          <input id="amount" type="text" class="form-control" placeholder="" />
-          <div class="input-group-addon">
-            wei
+
+      <div class="row">
+        <div class="form-group col-md-6">
+          <label>Amount of Ether</label>
+          <div class="input-group">
+            <input id="amount" type="text" class="form-control" placeholder="" />
+            <div class="input-group-addon">
+              wei
+            </div>
           </div>
         </div>
+        <div class="form-group col-md-6">
+            <label>Amount of Zcash</label>
+            <div class="input-group">
+              <input id="zecAmount" type="text" class="form-control" placeholder="" />
+              <div class="input-group-addon">
+                zec
+              </div>
+            </div
+        </div>
       </div>
+
       <a id="senderDetailsLink" data-toggle="collapse" href="#senderDetails" aria-expanded="false" aria-controls="senderDetails">View Details</a>
         <div class="collapse" id="senderDetails">
           <div class="well">
@@ -90,7 +103,8 @@
           </div>
         </div>
         <div class="form-group text-center">
-          <button type="button" class="btn btn-primary" id="lockBtn">Lock</button>
+          <button type="button" class="btn btn-primary" id="prepTrade" style="margin-right: 20px;">Prepare Trade</button>
+          <button type="button" class="btn btn-primary" id="lockBtn">Submit Trade</button>
         </div>
         <div id="lockMessage"></div>
     </div>
