Prepopulate a random secret preimage

--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -73,9 +73,11 @@
               <div class="input-group-addon">
                 zec
               </div>
-            </div
+            </div>
         </div>
       </div>
+
+      <div id="preimageRequiredError" class="alert alert-danger hidden">Preimage is required.</div>
 
       <a id="senderDetailsLink" data-toggle="collapse" href="#senderDetails" aria-expanded="false" aria-controls="senderDetails">View Details</a>
         <div class="collapse" id="senderDetails">
