--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -58,6 +58,13 @@
                 <pre id="fundTx"></pre>
               </div>
               <div class="form-group">
+                <label>Amount</label>
+                <div class="input-group">
+                  <span id="zecAmount" class="form-control"></span>
+                  <div class="input-group-addon">wei</div>
+                </div>
+              </div>
+              <div class="form-group">
                 <label>P2SH</label>
                 <pre id="p2sh"></pre>
               </div>
