--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -54,19 +54,19 @@
                 <pre id="redeemblocknum"></pre>
               </div>
               <div class="form-group">
-                <label>Funding Txid</label>
-                <pre id="fundTx"></pre>
-              </div>
-              <div class="form-group">
                 <label>Amount</label>
                 <div class="input-group">
                   <span id="zecAmount" class="form-control"></span>
-                  <div class="input-group-addon">wei</div>
+                  <div class="input-group-addon">zec</div>
                 </div>
               </div>
               <div class="form-group">
                 <label>P2SH</label>
                 <pre id="p2sh"></pre>
+              </div>
+              <div class="form-group">
+                <label>Funding Txid</label>
+                <pre id="fundTx"></pre>
               </div>
             </div>
           </div>
