Wording changes on UI

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,10 +46,10 @@
             <a href="/trade/zec/init?tradeId=1">(B) Review </a>
           </li>
           <li>
-            <a href="/trade/zec/settle?tradeId=1">(A) Settle ZEC Contract</a>
+            <a href="/trade/zec/settle?tradeId=1">(A) Withdraw ZEC</a>
           </li>
           <li>
-            <a href="/trade/eth/settle?tradeId=1">(B) Settle ETH Contract</a>
+            <a href="/trade/eth/settle?tradeId=1">(B) Withdraw ETH</a>
           </li>
         </ul>
       </div>
