--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <h2 align="center">Trade</h2>
+    <h2 align="center">Cross-chain Atomic Trade</h2>
     <form class="form" id="trade">
       <div class="row">
         <div class="col-md-6">
