Add terms language

--- a/views/pages/trade/zec-init.ejs
+++ b/views/pages/trade/zec-init.ejs
@@ -12,11 +12,11 @@
 
 		<div class="panel panel-default">
 	        <div class="panel-heading">
-	          Agreement
+	          Terms & Conditions
 	        </div>
 	        <div class="panel-body">
 	        	<div class="form-group">
-					By funding you are agreeing to this trade.
+					By funding you are agreeing to the conditions of this trade. Clicking "fund" will send the amount of ZEC specified above from your account to the P2SH address. The seller must withdraw within the timeout period, or the full amount will be refunded to you.
 				</div>
 				<center>
 					<button class="btn btn-primary" type="button" id="signBtn">Fund</button>
