Get trade info from frontend instead of backend

--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -108,6 +108,7 @@
           <button type="button" class="btn btn-primary" id="prepTrade" style="margin-right: 20px;">Prepare Trade</button>
           <button type="button" class="btn btn-primary" id="lockBtn">Submit Trade</button>
         </div>
+        <div id="prepMessage"></div>
         <div id="lockMessage"></div>
     </div>
   </div>
