Display zec p2sh on homepage

--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -109,6 +109,7 @@
           <button type="button" class="btn btn-primary" id="lockBtn">Submit Trade</button>
         </div>
         <div id="prepMessage"></div>
+        <div id="p2shMessage"></div>
         <div id="lockMessage"></div>
     </div>
   </div>
