--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -71,7 +71,7 @@
             <div class="input-group">
               <input id="zecAmount" type="text" class="form-control" placeholder="" />
               <div class="input-group-addon">
-                zec
+                zootoshi
               </div>
             </div>
         </div>
