--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -57,7 +57,7 @@
                 <label>Amount</label>
                 <div class="input-group">
                   <span id="zecAmount" class="form-control"></span>
-                  <div class="input-group-addon">zootoshi</div>
+                  <div class="input-group-addon">zatoshi</div>
                 </div>
               </div>
               <div class="form-group">
