--- a/views/pages/trade/zec-init.ejs
+++ b/views/pages/trade/zec-init.ejs
@@ -25,7 +25,7 @@
 		</div>
 
 		<div id="fundSuccessMessage" class="alert alert-success hidden">
-			Successfully funded contract (tx: <span id="txHash"></span>).
+			Successfully funded p2sh contract (tx: <a href='https://explorer.testnet.z.cash/tx/'><span id="txHash"></span></a>).
 		</div>
 	</div>
 </div>
