--- a/views/pages/trade/zec-settle.ejs
+++ b/views/pages/trade/zec-settle.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1 align="center">Settle ZEC</h1>
+        <h1 align="center">Withdraw ZEC</h1>
     </div>
 </div>
 
@@ -12,7 +12,7 @@
 
     <div class="panel panel-default">
       <div class="panel-heading">
-        Settle
+        Withdraw
       </div>
       <form class="form">
         <div class="panel-body">
