--- a/views/partials/trade.ejs
+++ b/views/partials/trade.ejs
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <h2 align="center">Trade</h2>
+    <h2 align="center">Cross-chain Atomic Trade</h2>
     <form class="form" id="trade">
       <div class="row">
         <div class="col-md-6">
@@ -18,7 +18,7 @@
                 <pre id="redeemer"></pre>
               </div>
               <div class="form-group">
-                <label>H(X)</label>
+                <label>sha256(preimage)</label>
                 <pre id="hash"></pre>
               </div>
               <div class="form-group">
