--- a/views/pages/trade/eth-init.ejs
+++ b/views/pages/trade/eth-init.ejs
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h1 align="center">Initialize</h1>
+      <h1 align="center">Initiate Cross-chain Trade</h1>
     </div>
   </div>
 
